<resources>
    <string name="app_name">SafeRide</string>

    <string name="action_settings">Settings</string>
    <string name="register_2">I do not have an account yet.</string>
    <string name="setupMap">Setting up map...</string>
    <string name="reportMethods">Reporting Methods</string>
    <string name="reportMethodsMessage">How would you like to report defects?</string>
    <string name="loggedOutMessage">Successfully logged out.</string>
    <string name="safeRideIsUp">SafeRide is up, drive safe!</string>
    <string name="driveSafe">Drive safe! Tap to stop autoReport.</string>
    <string name="stopDriving">Stop Driving.</string>
    <string name="uploadingImage">Uploading picture...</string>
    <string name="autoReport">AutoReport</string>
    <string name="pictureReport">Camera Report</string>
    <string name="cameraFailed">Oops, failed to capture picture.</string>
    <string name="reportSuccessful">"Successfully submitted your report."</string>
    <string name="loadingReport">Loading Reports...</string>
    <string name="login">Login</string>
    <string name="fillAllFields">Please complete all the fields</string>
    <string name="passwordMismatch">Password Mismatch</string>
    <string name="registeringNew">Registering new account...</string>
    <string name="loggingIn">Logging in...</string>
    <string name="save">Save</string>
    <string name="postingComment">Posting comment...</string>
    <string name="fillComment">Please fill in comment section and try again.</string>
    <string name="ratingReport">Rating the report...</string>
    <string name="rateSuccessful">Successfully rated this report.</string>
    <string name="commentSuccessful">Successfully posted your comment.</string>
    <string name="updateProfile">Update Profile</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Re-Enter Password</string>
    <string name="locatedAt">Located at:</string>
    <string name="new_report">New Report</string>
    <string name="view_report">View Reports</string>
    <string name="profile">My Profile</string>
    <string name="terms">By clicking Register, you agree to the terms and conditions.</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="reported">Reported by: </string>
    <string name="comment">Say something nice</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="signUp">Sign Up</string>
    <string name="viewImage">View Image</string>
</resources>
