<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_new_report" android:title="@string/new_report"
        android:icon="@mipmap/add"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_view_report" android:title="@string/view_report"
        android:icon="@mipmap/viewreport"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_profile" android:title="@string/profile"
        android:icon="@mipmap/user"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:icon="@mipmap/logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
